fix horizontal spacing of vertical item list

--- a/src/ui/styles/blocks/list.block.css
+++ b/src/ui/styles/blocks/list.block.css
@@ -21,8 +21,6 @@
   border-top: 1px solid rgb(201, 202, 208);
 }
 
-@media (max-width: 887px) {
-  .vertical-item {
-    margin-left: 0;
-  }
+.vertical-item {
+  margin-left: 0;
 }
